fix: make dropdown menu options in windows legible

--- a/src/styles/forms.sass
+++ b/src/styles/forms.sass
@@ -55,6 +55,9 @@ select
   padding-right: calc(18px + 0.5rem)
   cursor: pointer
 
+  option
+    color: $background
+
 // Position drop-down arrow over select to trigger open on click 
 select + svg
   margin-left: -18px
